# assignment_motor-control

./: .gitignore  CMakeLists.txt  README.md
app/scripts/: assignment_motor-control-system.xml  assignment_motor-control.xml
smoke-test/: CMakeLists.txt  test.cpp  test.sh  test.xml
smoke-test/fixtures/: fixture.xml
src/: client.cpp  server.cpp  trigger.cpp
